# lightlog

./: .gitignore  CMakeLists.txt  LICENSE  README.md  init.sh  install.sh  log.txt  log_non_append.txt
example/: CMakeLists.txt  example_main.cpp
script/: build.sh  install.sh
src/: CMakeLists.txt  loglightConfig.cmake.in
src/interface/: loglight.h
src/logger/: console_logger.cpp  console_logger.h  file_logger.cpp  file_logger.h  logger.cpp  logger.h
src/logger_factory/: logger_factory.cpp  logger_factory.h
src/queue/: queue.cpp  queue.h
